<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_normal"
	android:orientation="vertical" >

	<LinearLayout
		android:id="@+id/about_us_body"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:src="@drawable/pic_about_us" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/about_us_body"
		android:orientation="vertical" >

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="12dp"
			android:gravity="center_vertical"
			android:text="@string/aboutus_text" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"
			android:layout_marginTop="10dp"
			android:gravity="right"
			android:text="@string/aboutus_text2" />
	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="10dp"
		android:text="@string/aboutus_copyright"
		android:textColor="@color/text_color"
		android:textSize="10sp" />

</RelativeLayout>