<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fadingEdge="none" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="vertical"
			android:paddingBottom="10.0dp"
			android:paddingLeft="10.0dp"
			android:paddingRight="10.0dp"
			android:paddingTop="15.0dp" >

			<RelativeLayout
				android:id="@+id/setting_my_info_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="2.0dp"
				android:layout_marginRight="2.0dp"
				android:background="@drawable/btn_default"
				android:clickable="true"
				android:orientation="horizontal"
				android:paddingTop="8.0dp" >

				<TextView
					android:id="@+id/mynickname"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_centerVertical="true"
					android:paddingLeft="17.0dp"
					android:text="@string/setting_text_myprofile"
					android:textColor="@color/black"
					android:textSize="16.0sp" />

				<ImageView
					android:id="@+id/btn_setting_my_information"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_gravity="right"
					android:clickable="true"
					android:paddingRight="20.0dp"
					android:src="@drawable/ic_arrow" />
			</RelativeLayout>

			<LinearLayout
				android:id="@+id/MorePageTableLayout_Follow"
				android:layout_width="match_parent"
				android:layout_height="130dp"
				android:layout_marginTop="15dp"
				android:background="@drawable/btn_default"
				android:orientation="vertical"
				android:paddingLeft="1.0dp" >

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2.0dp"
					android:layout_marginRight="2.0dp"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:paddingBottom="16.0dp"
					android:paddingTop="8.0dp" >

					<hillfly.wifichat.view.SettingSwitchButton
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/checkbox_sound"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="14dp"
						android:gravity="right"
						android:paddingRight="20.0dp" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_alignParentLeft="true"
						android:layout_centerVertical="true"
						android:gravity="center_vertical"
						android:includeFontPadding="false"
						android:paddingLeft="17.0dp"
						android:text="@string/setting_text_sysconfig_sound"
						android:textColor="@color/black"
						android:textSize="16.0sp" />
				</RelativeLayout>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:background="@drawable/divider_horizontal_line" />

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="2.0dp"
					android:layout_marginRight="2.0dp"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:paddingBottom="16.0dp"
					android:paddingTop="8.0dp" >

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_centerVertical="true"
						android:drawablePadding="10.0dp"
						android:gravity="center_vertical"
						android:includeFontPadding="false"
						android:paddingLeft="17.0dp"
						android:text="@string/setting_text_sysconfig_vibra"
						android:textColor="@color/black"
						android:textSize="16.0sp" />

					<hillfly.wifichat.view.SettingSwitchButton
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/checkbox_vibration"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="14dp"
						android:gravity="right"
						android:paddingRight="20.0dp" />
				</RelativeLayout>
			</LinearLayout>

			<Button
				android:id="@+id/btn_delete_all_chattinginfo"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="15dp"
				android:background="@drawable/btn_default"
				android:gravity="center"
				android:text="@string/setting_btn_cleandb"
				android:textColor="@color/black"
				android:textSize="17.0sp" />

			<Button
				android:id="@+id/btn_about_us"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginBottom="8dp"
				android:background="@drawable/btn_default"
				android:gravity="center"
				android:text="@string/setting_btn_aboutus"
				android:textColor="@color/black"
				android:textSize="17.0sp" />

			<Button
				android:id="@+id/btn_exit_application"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:background="@drawable/btn_red"
				android:gravity="center"
				android:text="@string/setting_btn_closeapp"
				android:textColor="@color/white"
				android:textSize="17.0sp" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>