<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/message_plus_layout_bar"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_chat_plusbar"
	android:orientation="horizontal"
	android:visibility="gone" >

	<LinearLayout
		android:id="@+id/message_plus_layout_picture"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@drawable/bg_chat_plusitem"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="5dip" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_chat_plusbar_pic_normal" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chat_text_plus_image"
			android:textColor="@color/white"
			android:textSize="12sp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/message_plus_layout_camera"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@drawable/bg_chat_plusitem"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="5dip" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_chat_plusbar_camera_normal" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chat_text_plus_takephoto"
			android:textColor="@color/white"
			android:textSize="12sp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/message_plus_layout_file"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="@drawable/bg_chat_plusitem"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="5dip"
		android:visibility="gone" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_chat_plusbar_present_normal" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chat_text_plus_file"
			android:textColor="@color/white"
			android:textSize="12sp" />
	</LinearLayout>

</LinearLayout>