<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:id="@+id/setting_page_header"
                layout="@layout/include_header" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="15.0dip" >

                <RelativeLayout
                    android:id="@+id/setting_my_info_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
              
                    android:background="@drawable/btn_default"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:paddingTop="8.0dip" >
				
                    <ImageView
                        android:id="@+id/myavater"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:maxHeight="10dp"
                        android:maxWidth="10dp"
                        android:visibility="gone"
                        android:paddingLeft="18.0dip"            
                        android:src="@drawable/mylike" />
                   
                    <TextView
                        android:id="@+id/mynickname"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/myavater"
                        android:paddingLeft="17.0dip"
                        android:text="@string/setting_text_myprofile"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <ImageView
                        android:id="@+id/btn_setting_my_information"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right"
                        
                        android:clickable="true"
                        android:paddingRight="20.0dip"
                        android:src="@drawable/ic_arrow" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="4.0dip"
                    android:text="@string/setting_text_sysconfig"
                    android:textSize="16.0sp" />

                <LinearLayout
                    android:id="@+id/MorePageTableLayout_Follow"
                    android:layout_width="fill_parent"
                    android:layout_height="130dp"
                    android:background="@drawable/btn_default"
                    android:orientation="vertical"
                    android:paddingLeft="1.0dip" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="8.0dip" >

                        <szu.wifichat.android.view.SettingSwitchButton
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/checkbox_sound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="14dp"
                            android:gravity="right"
                            android:paddingRight="20.0dip" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/setting_text_sysconfig_sound"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/divider_horizontal_line" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="8.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_centerVertical="true"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/setting_text_sysconfig_vibra"
                            android:textColor="@color/black"
                            android:textSize="16.0sp" />

                        <szu.wifichat.android.view.SettingSwitchButton
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/checkbox_vibration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="14dp"
                            android:gravity="right"
                            android:paddingRight="20.0dip" />
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_delete_all_chattinginfo"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/btn_default"
                    android:gravity="center"
                    android:text="@string/setting_btn_cleandb"
                    android:textColor="@color/black"
                    android:textSize="17.0sp" />

                <Button
                    android:id="@+id/btn_about_us"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/btn_default"
                    android:gravity="center"
                    android:text="@string/setting_btn_aboutus"
                    android:textColor="@color/black"
                    android:textSize="17.0sp" />

                <Button
                    android:id="@+id/btn_exit_application"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_default"
                    android:gravity="center"
                    android:text="@string/setting_btn_closeapp"
                    android:textColor="@color/black"
                    android:textSize="17.0sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>